style/style.css
/* ... */
/* ---------- Header -------------- */
.header {
    background-color: rgb(5, 5, 192);
    padding: 0.7vw 0.7vw 0.7vw 0.7vw;
    margin: 0;
    border: 0.35vw solid rgb(5, 5, 192);
    border-radius: 2vw;
    display: flex;
    flex-direction: row;
    position: inherit;
}

.website-name {
    font-size: 4vw;
}

.header nav a {
    font-family: "Bitcount Prop Single";
    color: rgb(206, 175, 2);
    font-weight: bolder;
}

.title-section {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 40%;
}

.title-section h1 {
    padding: 0;
    margin: 0;
}

.links-section {
    width:60%;
    display: flex;
    flex-direction: row;
    justify-content: right;
    align-items: center;
}

.links-section nav {
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: row;
    justify-content: right;
    align-self: center;
    align-items: center;
    gap: 3vw;
}

.links-section nav a{
    font-family: "Bitcount Prop Single";
    color: rgb(206, 175, 2);
    font-size: 3vw;
}

.links-section nav a:hover{
    color: rgb(255, 245, 186);
    font-size: 2.8vw;
}

/* .header div {
    border: white solid 2px;
} */

/* -------------- Home ---------------- */

.home-content {
    display: flex;
    flex-direction: column;
    /* border: 2px solid red; */
    width: 100%;
}

.welcome-section {
    /* border: 2px solid orange; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 0.5rem;
    margin: 0;
    padding: 0;
}

.welcome1-heading {
    font-family: "Bitcount Prop Single";
    color: rgb(206, 175, 2);
    font-size: 6vw;
    text-align: center;
    margin: 0;
    padding: 0;
}

.welcome1-heading:hover {
    font-family: "Bitcount Prop Single";
    color: rgb(255, 238, 144);
    font-size: 5.5vw;
    text-decoration: underline;
    margin: 0;
    padding: 0;
}

.welcome2-heading {
    font-family: "Bitcount Prop Single";
    color: rgb(206, 175, 2);
    font-size: 4vw;
    text-align: center;
    margin: 0;
    padding: 0;
}

.welcome3-heading {
    font-family: "Bitcount Prop Single";
    color: rgb(206, 175, 2);
    font-size: 2.5vw;
    text-align: center;
    margin: 0;
    padding: 0;
    font-style: italic;
}

.random-section {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    /* border: 2px solid green; */
}

.random-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 2vw;
    margin: 2vw;
    margin-bottom: 0;
    padding: 2vw;
    border: 1.5vw solid rgb(206, 175, 2);
    border-radius: 5vw;
    width: 70%;
}

.random-content h1, .random-content h2 {
    margin: 0;
    padding: 0;
    text-align: center;
}

.random-picks-section {
    display: flex;
    flex-direction: row;
    /* border: 2px solid pink; */
    width: 90%;
    align-items: center;
    justify-content: center;
    gap: 2vw;
}

.random-anime, .random-manga {
    border: 1.5vw solid rgb(5, 5, 192);
    border-radius: 2vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 44vw;
    width: 45%;
}

.randomAnimePick, .randomMangaPick {
    height: 15%;
    width: 100%;
    /* border: 2px solid palegreen; */
    font-weight: bold;
    text-align: center;
    justify-content: center;
    font-size: 2vw;
}

.randomImgContainer {
    border: 0.8vw solid rgb(206, 175, 2);
    border-radius: 1vw;
    height: 65%;
}

.randomAnimeImg, .randomMangaImg {
    width: 25vw;
    height: 100%;
    /* border: 2px solid red; */
}


/* ------------- Browse --------------*/
.top-section {
    width: 100%;
    display: flex;
    flex-direction: row;
    /* border: 2px solid rgb(255, 0, 140); */
    height: 100%;
    gap: 2vw;
}

.topAnime-section, .topManga-section {
    /* border: 2px solid red; */
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.topAnime-section {
    width: 50%;
}

.topManga-section {
    width: 50%;
}

.topAnime-content, .topManga-content {
    /* border: 2px solid greenyellow; */
    width: 95%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.topAnimeTable, .topMangaTable {
    width: 100%;
    border: solid rgb(206, 175, 2) 0.6vw;
}

.topHeaderTable th, .topBodyTable td {
    border: solid rgb(206, 175, 2) 0.3vw;
    font-size: 1vw;
}

.topHeaderTable th {
    color: rgb(206, 175, 2);
    font-size: 2vw;
}

.topBodyTable td {
    font-size: 1.5vw;
    text-align: center;
}

.topTableRow {
    max-height: 15vw;
}

.topTableRow td {
    height: 8vw;
    font-size: 1.4vw;
}

.animeCover, .mangaCover {
    height: 16vw;
    width: 12vw;
    /* border: 2px solid red; */
}

/* ---------- My Stuff --------------- */

.button-section {
    display: flex;
    flex-direction: row;
    align-content: center;
    gap: 1.5vw;
    /* border: red solid 2px; */
}

.button-section > *, .flex-row > * {
    align-content: center;
    justify-content: center;
}

#addContent, #deleteAllContent {
    border: rgb(206, 175, 2) solid 0.5vw;
    border-radius: 1vw;
    background-color: rgb(5, 5, 192);
    color: white;
    padding: 1vw;
    font-size: 1.5vw;
}

#addContent:hover, #deleteAllContent:hover {
    text-decoration: underline;
    background-color: rgb(76, 76, 221);
    font-size: 1.2vw;
}

.myStuffTable {
    width: 100%;    
    border: solid rgb(206, 175, 2) 0.5vw;
}

.myStuffTable th, .myStuffTable td {
    border: solid rgb(206, 175, 2) 0.2vw;
    text-align: center;
    font-size: 2vw;
}

.delTableContent {
    font-size: 1.5vw;
}

.myStuffTableBody {
    height: 10%;
}

.flex-column {
    display: flex;
    flex-direction: column;
}

#filterContent, #filterReset {
    border: rgb(206, 175, 2) solid 0.5vw;
    border-radius: 0.7vw;
    background-color: rgb(5, 5, 192);
    color: white;
    padding: 1vw 1.5vw 1vw 1.5vw;
    font-size: 1.5vw;
    text-align: center;
}
/* ... */

